--- a/vignettes/tutorial.Rmd
+++ b/vignettes/tutorial.Rmd
@@ -16,10 +16,10 @@ knitr::opts_chunk$set(
 
 ```{r setup}
 library(STAT302package)
+library(ggplot2)
 ```
 A tutorial for the function my_knn_cv in the STAT302packgePredict 
 Using the my_gapminder dataset, we predict output class continent using covariates gdpPercap and lifeExp by utilizing 5-fold cross validation (k_cv = 5).
-
 
 ```{r}
 tu_knn <- my_knn_cv(train = my_gapminder[, 3 : 4], 
@@ -27,12 +27,25 @@ tu_knn <- my_knn_cv(train = my_gapminder[, 3 : 4],
 ```
 
 ```{r}
-k_vector <- c(2, 5, 10, 100)
-tu_rf <- matrix(NA, nrow = 30, ncol = 4)
+k_vector <- c(2, 5, 10)
+tu_rf <- matrix(NA, nrow = 90, ncol = 2)
 for (i in 1 : length(k_vector)) {
-  for (k in 1 : 30) {
-    tu_rf[k, i] <- my_rf_cv(k = k_vector[i])
+  for (j in 1 : 30) {
+    tu_rf[(i - 1) * 30 + j, 1] <- k_vector[i]
+    tu_rf[(i - 1) * 30 + j, 2] <- my_rf_cv(k = k_vector[i])
   }
 }
-tu_rf
+```
+
+```{r}
+tu <- data.frame("K_value" = tu_rf[, 1], "MSE" = tu_rf[, 2])
+tu_graph <- ggplot(data = tu,
+       aes(x = K_value, y = MSE, group = K_value)) +
+  geom_boxplot(fill = "lightblue") +
+  theme_bw(base_size = 16) +
+  labs(title = "CV estimated MSE for different k-values",
+       x = "k-values",
+       y = "Estimated MSE") + 
+  theme(plot.title = element_text(hjust = 0.5, face = "bold")) +
+  scale_x_continuous(breaks = c(2, 5, 10)) 
 ```
