--- a/vignettes/tutorial.Rmd
+++ b/vignettes/tutorial.Rmd
@@ -153,13 +153,15 @@ tu_graph <- ggplot(data = tu,
        y = "Estimated MSE") + 
   theme(plot.title = element_text(hjust = 0.5, face = "bold")) +
   scale_x_continuous(breaks = c(2, 5, 10)) 
-rf_vector <- c(mean(tu_rf[1 : 30, 2]), mean(tu_rf[31 : 60, 2]), mean(tu_rf[61 : 90, 2]), sd(tu_rf[1 : 30, 2]),
-               sd(tu_rf[31 : 60, 2]), sd(tu_rf[61 : 90, 2]))
+rf_vector <- c(mean(tu_rf[1 : 30, 2]), mean(tu_rf[31 : 60, 2]), mean(tu_rf[61 : 90, 2]), sd(tu_rf[1 : 30, 2]), sd(tu_rf[31 : 60, 2]), sd(tu_rf[61 : 90, 2]))
+rf_vector
 rf_matrix <- matrix(rf_vector, nrow = 3, ncol = 2)
 tu_graph
-# Use a table to display the average CV estimate and the standard deviation of the CV estimates across  k
+# Use a table to display the average CV estimate and the standard deviation of the CV estimates across k
 rf_table <- data.frame("k_values" = c(2, 5, 10),"mean" = rf_matrix[, 1], "sd" = rf_matrix[, 2])
 # Results of observation: as k gets bigger the means of CV estimation also get bigger, but the standard 
 # deviations get smaller. Also, the ranges of CV estimates also get smaller as k gets bigger.
-# 
+# Reasoning: Larger K means less bias towards overestimating the true expected error (as training folds 
+# will be closer to the total dataset) but higher variance and higher running time (as you are getting 
+# closer to the limit case: Leave-One-Out CV)
 ```
